resources/laravel-debugbar.css
div.phpdebugbar,
div.phpdebugbar-openhandler,
div.phpdebugbar-widgets-datasets-panel {
    --debugbar-red-vivid: #eb4432;

    /*--debugbar-background: #fff;*/
    /*--debugbar-background-alt: #EFEFEF;*/
    /*--debugbar-text: #222;*/
    /*--debugbar-text-muted: #888;*/
    --debugbar-border: #bbb;

    --debugbar-header: #fff;
    --debugbar-header-text: #555;
    /*--debugbar-header-border: #ddd;*/

    /*--debugbar-active: #ccc;*/
    /*--debugbar-active-text: #666;*/

    --debugbar-icons: var(--debugbar-header-text);
    --debugbar-badge: #fff;
    --debugbar-badge-text: var(--debugbar-red-vivid);

    --debugbar-badge-active: var(--debugbar-red-vivid);
    --debugbar-badge-active-text: #fff;

    --debugbar-link: #777;
    --debugbar-hover: #666;

    --debugbar-header-hover: #ebebeb;
    --debugbar-icon-brand: var(--debugbar-icon-brand-laravel);
}

/* Dark mode */
div.phpdebugbar[data-theme='dark'],
div.phpdebugbar-openhandler[data-theme='dark'],
div.phpdebugbar-widgets-datasets-panel[data-theme='dark'] {
    --debugbar-white: #FFFFFF;
    --debugbar-gray-100: #F7FAFC;
    --debugbar-gray-200: #EDF2F7;
    --debugbar-gray-300: #E2E8F0;
    --debugbar-gray-400: #CBD5E0;
    --debugbar-gray-500: #A0AEC0;
    --debugbar-gray-600: #718096;
    --debugbar-gray-700: #4A5568;
    --debugbar-gray-800: #252a37;
    --debugbar-gray-900: #18181b;
    --debugbar-red-vivid: #eb4432;

    --debugbar-background: var(--debugbar-gray-800);
    --debugbar-background-alt: var(--debugbar-gray-900);
    --debugbar-text: var(--debugbar-gray-100);
    --debugbar-text-muted: var(--debugbar-gray-400);
    --debugbar-border: var(--debugbar-gray-600);

    --debugbar-header:var(--debugbar-gray-900);
    --debugbar-header-text: var(--debugbar-gray-200);
    --debugbar-header-border: var(--debugbar-gray-800);
    --debugbar-header-hover: var(--debugbar-gray-700);

    --debugbar-active: var(--debugbar-gray-800);
    --debugbar-active-text: var(--debugbar-gray-100);

    --debugbar-icons: var(--debugbar-header-text);
    --debugbar-badge: var(--debugbar-white);
    --debugbar-badge-text: var(--debugbar-red-vivid);

    --debugbar-badge-active: var(--debugbar-red-vivid);
    --debugbar-badge-active-text: var(--debugbar-white);

    --debugbar-link: var(--debugbar-gray-300);
    --debugbar-hover: var(--debugbar-gray-100);
    --debugbar-hover-bg: var(--debugbar-gray-700);
}

div.phpdebugbar[data-theme='dark'] code.phpdebugbar-widgets-sql,
div.phpdebugbar[data-theme='dark'] .phpdebugbar-widgets-name,
div.phpdebugbar[data-theme='dark'] .phpdebugbar-widgets-key,
div.phpdebugbar[data-theme='dark'] .phpdebugbar-widgets-success > pre.sf-dump > .sf-dump-note {
    color: #fdfd96;
}

/* Force Laravel Whoops exception handler to be displayed under the debug bar */
.Whoops.container {
    z-index: 5999999;
}

div.phpdebugbar-openhandler-overlay {
    cursor: pointer;
}

div.phpdebugbar-openhandler {
    border-top: 3px solid var(--debugbar-red-vivid);
}

div.phpdebugbar-resize-handle {
    height: 3px;
    margin-top: -3px;
    border-bottom: 0;
    background-color: var(--debugbar-red-vivid);
}

div.phpdebugbar-closed,
div.phpdebugbar-minimized {
    border-top-color: var(--debugbar-border);
}

div.phpdebugbar code, div.phpdebugbar pre {
    color: var(--debugbar-text);
}

div.phpdebugbar pre.sf-dump {
    color: var(--debugbar-text);
}

div.phpdebugbar-body {
    border-top: 1px solid var(--debugbar-header-border);
}

a.phpdebugbar-restore-btn:after {
    background: var(--debugbar-red-vivid);
}

a.phpdebugbar-restore-btn {
    border-right-color: var(--debugbar-border) !important;
}

div.phpdebugbar-header .phpdebugbar-tab {
    border-left: 1px solid var(--debugbar-header-border);
}

dl.phpdebugbar-widgets-kvlist dt,
dl.phpdebugbar-widgets-kvlist dd,
table.phpdebugbar-widgets-tablevar td {
    border-top: 0px;
}

div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter,
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter.phpdebugbar-widgets-excluded {
    background-color: #6d6d6d;
    color: #FFF;
}

div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter[rel="alert"],
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter.phpdebugbar-widgets-excluded[rel="alert"],
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter[rel="info"],
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter.phpdebugbar-widgets-excluded[rel="info"] {
    background-color: #5896e2;
}

div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter[rel="debug"],
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter.phpdebugbar-widgets-excluded[rel="debug"],
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter[rel="success"],
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter.phpdebugbar-widgets-excluded[rel="success"] {
    background-color: #45ab45;
}

div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter[rel="critical"],
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter.phpdebugbar-widgets-excluded[rel="critical"],
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter[rel="error"],
div.phpdebugbar-widgets-messages div.phpdebugbar-widgets-toolbar a.phpdebugbar-widgets-filter.phpdebugbar-widgets-excluded[rel="error"] {
    background-color: var(--debugbar-red-vivid);
}
/* ... */

